cluster/k8s/docker-ci/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docker-ci
  labels:
    name: docker-ci
    pod-security.kubernetes.io/enforce: privileged
    goldilocks.fairwinds.com/enabled: "false"
    rbac.ducktape.io/kubectl-sandbox-namespace-diagnostics: "true"
